trigger gpu test in PR targeting main

--- a/.yamato/pytest-gpu.yml
+++ b/.yamato/pytest-gpu.yml
@@ -15,9 +15,12 @@ pytest_gpu:
       python3 -m pytest -m "not check_environment_trains" --junitxml=junit/test-results.xml -p no:warnings
   triggers:
     cancel_old_ci: true
-    recurring:
-      - branch: main
-        frequency: daily
+    expression: |
+      (pull_request.target eq "main" OR
+      pull_request.target match "release.+") AND
+      NOT pull_request.draft AND
+      pull_request.changes.any match "ml-agents/mlagents/**" AND
+      NOT pull_request.changes.all match "**/*.md"
   artifacts:
     logs:
       paths:
