--- a/com.unity.ml-agents.extensions/package.json
+++ b/com.unity.ml-agents.extensions/package.json
@@ -6,5 +6,6 @@
   "description": "A source-only package for new features based on ML-Agents",
   "dependencies": {
     "com.unity.ml-agents": "2.0.0-exp.1"
+    "com.unity.modules.physics": "1.0.0"
   }
 }
