--- a/.yamato/com.unity.ml-agents-test.yml
+++ b/.yamato/com.unity.ml-agents-test.yml
@@ -1,16 +1,12 @@
 test_editors:
     - version: 2018.4
-        # 2018.4 doesn't support code-coverage
-      enableCodeCoverage: !!bool false
         # We want some scene tests to run in the DevProject, but packages there only support 2019+
       testProject: Project
       enableNoDefaultPackages: !!bool false
     - version: 2019.4
-      enableCodeCoverage: !!bool true
       testProject: DevProject
       enableNoDefaultPackages: !!bool true
     - version: 2020.2
-      enableCodeCoverage: !!bool true
       testProject: DevProject
       enableNoDefaultPackages: !!bool true
 
@@ -67,12 +63,6 @@ all_package_tests:
   {% for editor in test_editors %}
   {% for platform in test_platforms %}
 
-  {% if editor.enableCodeCoverage %}
-  {% capture coverageOptions %} --enable-code-coverage --code-coverage-options 'generateHtmlReport;assemblyFilters:+{{ package.assembly }}'{% endcapture %}
-  {% else %}
-  {% assign coverageOptions = "" %}
-  {% endif %}
-
   {% if editor.enableNoDefaultPackages %}
   {% assign noDefaultPackagesOptions = "--extra-create-project-arg='-upmNoDefaultPackages'" %}
   {% else %}
@@ -87,16 +77,14 @@ test_{{ package.name }}_{{ platform.name }}_{{ editor.version }}:
         flavor: {{ platform.flavor}}
     commands:
         - npm install upm-ci-utils@stable -g --registry https://artifactory.prd.cds.internal.unity3d.com/artifactory/api/npm/upm-npm
-        - upm-ci project test -u {{ editor.version }} --project-path {{ editor.testProject }} --package-filter {{ package.name }} {{ coverageOptions }} {{ noDefaultPackagesOptions }} --extra-utr-arg "reruncount=2"
-      {% if editor.enableCodeCoverage %}
-        - python3 ml-agents/tests/yamato/check_coverage_percent.py upm-ci~/test-results/ {{ package.minCoveragePct }}
-      {% endif %}
+        - upm-ci project test -u {{ editor.version }} --project-path {{ editor.testProject }} --package-filter {{ package.name }} {{ noDefaultPackagesOptions }} --extra-utr-arg "reruncount=2"
     artifacts:
         logs:
             paths:
                 - "upm-ci~/test-results/**/*"
     dependencies:
         - .yamato/com.unity.ml-agents-pack.yml#pack
+        - .yamato/com.unity.ml-agents-coverage.yml#test_coverage_{{ package.name }}_{{ platform.name }}_{{ editor.version }}
     triggers:
         cancel_old_ci: true
       {% if platform.name == "linux" %}
